lists.cppresult.txt
In file included from cur.cpp:13:0:
uljshin/lists.cpp: In instantiation of 'T NewList<T>::get(int) [with T = std::basic_string<char>]':
cur.cpp:201:1:   required from here
uljshin/lists.cpp:148:17: error: 'class NewList<std::basic_string<char> >' has no member named 'data'
     return tmp->data;
                 ^
./check.sh: line 24: ./a.out: No such file or directory
